# cmake-test

./: CMakeLists.txt
One/: UserControl1.xaml  UserControl1.xaml.cs
Two/: UserControl1.xaml  UserControl1.xaml.cs
